@@ -11,3 +11,5 @@ t/01throw.t
 t/02order.t
 t/03throw-non-Error.t
 t/04use-base-Error-Simple.t
+t/05text-errors-with-file-handles.t
+t/lib/MyDie.pm
